# tokio-system-resolver

./: .gitignore  Cargo.toml  README.md
.github/workflows/: os-ci.yml
benches/: compare_hickory.rs  throughput.rs
src/: config.rs  error.rs  ffi.rs  lib.rs  resolver.rs  types.rs
