[package]
name = "tokio-system-resolver"
version = "0.4.1"
edition = "2024"
description = "Tokio-compatible async resolver wrapping the system getaddrinfo and getnameinfo calls"
license = "Unlicense"
keywords = ["dns", "resolver", "getaddrinfo", "tokio", "async"]
categories = ["network-programming", "asynchronous", "os"]
readme = "README.md"
repository = "https://github.com/Elizafox/tokio-system-resolver"
rust-version = "1.85.1"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
# Intentional: the soft/hard permits are dropped at precise points for stall semantics.
significant_drop_tightening = "allow"

[dependencies]
tokio = { version = "1", features = ["macros", "sync", "time"] }
libc = "0.2"
thiserror = "2"

[dev-dependencies]
# test-util provides paused-time control (start_paused) used by the timer tests.
tokio = { version = "1", features = ["macros", "sync", "time", "test-util", "rt-multi-thread"] }

[[bench]]
name = "throughput"
harness = false
