[package]
name = "tokio-system-resolver"
version = "0.5.0"
edition = "2024"
description = "Tokio-compatible async resolver wrapping the system getaddrinfo and getnameinfo calls"
license = "Unlicense"
keywords = ["dns", "resolver", "getaddrinfo", "tokio", "async"]
categories = ["network-programming", "asynchronous", "os"]
readme = "README.md"
repository = "https://github.com/Elizafox/tokio-system-resolver"
rust-version = "1.85.1"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Restrictive style lints (like avoiding panics, etc.)
allow_attributes_without_reason = "warn"
dbg_macro = "deny"
doc_paragraphs_missing_punctuation = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
expect_used = "deny"
field_scoped_visibility_modifiers = "warn"
fn_to_numeric_cast_any = "deny"
get_unwrap = "deny"
if_then_some_else_none = "warn"
indexing_slicing = "deny"
infinite_loop = "warn"
map_with_unused_argument_over_ranges = "warn"
mem_forget = "warn"
missing_assert_message = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
panic = "deny"
panic_in_result_fn = "deny"
precedence_bits = "warn"
print_stderr = "warn"
print_stdout = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_name_method = "warn"
semicolon_outside_block = "warn"
string_add = "warn"
string_lit_chars_any = "warn"
string_slice = "deny"
tests_outside_test_module = "deny"
todo = "deny"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "deny"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
unwrap_in_result = "deny"
unwrap_used = "deny"
use_debug = "warn"

# Common in Rust libraries
module_name_repetitions = "allow"
# Intentional: the soft/hard permits are dropped at precise points for stall semantics.
significant_drop_tightening = "allow"

[dependencies]
tokio = { version = "1", features = ["macros", "sync", "time"] }
libc = "0.2"
thiserror = "2"
# Optional, only for the `compare_hickory` benchmark (enabled via the
# `bench-compare` feature). Pulls in a large dependency tree, so it is kept out
# of the default build and CI.
hickory-resolver = { version = "0.25.2", optional = true }

[features]
# Enables the `compare_hickory` benchmark.
bench-compare = ["dep:hickory-resolver"]

[dev-dependencies]
# test-util provides paused-time control (start_paused) used by the timer tests.
tokio = { version = "1", features = ["macros", "sync", "time", "test-util", "rt-multi-thread"] }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "compare_hickory"
harness = false
required-features = ["bench-compare"]
